--- a/recipes/cupcakes.html
+++ b/recipes/cupcakes.html
@@ -7,5 +7,34 @@
 
     <body>
         <hi>French Toast Cupcakes</hi>
+        <img src="cupcakes.jpg">
+        <h2>Description</h2>
+        <p>These delicious cupcakes taste like French toast. They also include a maple buttercream. They are scrumptious, decadent, and everyone will love them.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1/2 cup butter, softened</li>
+            <li>1-1/2 cups sugar</li>
+            <li>2 eggs</li>
+            <l1>2 teaspoons vanilla extract</l1>
+            <li>2 cups all-purpose flour</li>
+            <li>2 teaspoons ground cinnamon</li>
+            <li>1/2 teaspoon baking powder</li>
+            <li>1/2 teaspoon baking soda</li>
+            <li>1/4 teaspoon salt</li>
+            <li>1/4 teaspoon ground nutmeg</li>
+            <l1>1-1/3 cups buttermilk</l1>
+            <l1>1/2 cup butter, softened</l1>
+            <li>1/4 cup shortening</li>
+            <li>1/2 cup maple syrup</li>
+            <l1> dash of salt</l1>
+            <li> 2-1/2 cups powdered sugar</li>
+            <li> six bacon strips, cooked and crumbled</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>In a large bowl, cream butter and sugar until light and fluffy. Add eggs, one at a time, beating well after each addition. Beat in vanilla. Combine the flour, cinnamon, baking powder, baking soda, salt and nutmeg; add to the creamed mixture alternately with buttermilk, beating well after each addition.</li>
+            <li>Fill paper-lined muffin cups two-thirds full. Bake at 350° for 17-22 minutes or until a toothpick inserted in the center comes out clean. Cool for 10 minutes before removing from pans to wire racks to cool completely.</li>
+            <li>For frosting, in a small bowl, beat butter and shortening until fluffy. Beat in maple syrup and salt. Add confectioners’ sugar; beat until smooth. Frost cupcakes. Sprinkle with bacon if desired.</li>
+        </ol>
     </body>
 </html>
