--- a/recipes/cupcakes.html
+++ b/recipes/cupcakes.html
@@ -7,7 +7,7 @@
 
     <body>
         <hi>French Toast Cupcakes</hi>
-        <img src="cupcakes.jpg">
+        <p><img src="frenchtoastcupcakes.jpg"></p>
         <h2>Description</h2>
         <p>These delicious cupcakes taste like French toast. They also include a maple buttercream. They are scrumptious, decadent, and everyone will love them.</p>
         <h2>Ingredients</h2>
