Completed main page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/cupcakes.html">French Toast Cupcakes</a>
+        <a href="recipes/tacos.html">Easy Chorizo Street Tacos</a>
+        <a href="recipes/pizzacasserole.html">Easy Upside-Down Pizza Casserole</a>
     </body>
 
 </html>
