Changed title fonts

--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <hi>Easy Chorizo Street Tacos</hi>
+        <h3>Easy Chorizo Street Tacos</h3>
         <p><img src="tacos.jpg"></p>
         <h2>Description</h2>
         <p>These street tacos are delicious and, as the name implies, easy. Great for parties, events, or just a Tuesday night on the couch.</p>
