--- a/recipes/cupcakes.html
+++ b/recipes/cupcakes.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <hi>French Toast Cupcakes</hi>
+        <h3>French Toast Cupcakes</h3>
         <p><img src="frenchtoastcupcakes.jpg"></p>
         <h2>Description</h2>
         <p>These delicious cupcakes taste like French toast. They also include a maple buttercream. They are scrumptious, decadent, and everyone will love them.</p>
